--- a/videos.html
+++ b/videos.html
@@ -62,7 +62,7 @@
         background-color: #f1f1f1;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
-        min-width: 160px;
+        min-width: 80px;
         width: 100%;
       }
 
@@ -127,7 +127,7 @@
                       </div>
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
-                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
+                  <!--    <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
                       <div class="dropdown" id="Gallery">
                       <li class="active" style="list-style: none;">
                         <a id="kala" href="#">Gallery</a></li>
@@ -141,7 +141,7 @@
                        <!--   <li><a href="sponsor.html">Sponsors</a></li>
                          <li><a href="index.html#sch">Schedule</a></li>
                       <li><a href="index.html#spk">Speakers</a></li> -->
-                        <li><a href="#foo">Contact</a></li>
+                    <!--    <li><a href="#foo">Contact</a></li>-->
                       </ul>
                     </div>
                   </nav>
@@ -168,13 +168,13 @@
           </div>
 
           <div class="row">
-              <div class="col-md-6 col-xs-12">
+              <div class="col-md-4 col-xs-12">
                 <iframe width="100%" height="315" style="margin-bottom: 30px;" src="https://www.youtube.com/embed/LjuAimWKBjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
-              <div class="col-md-6 col-xs-12">
+              <div class="col-md-4 col-xs-12">
                 <iframe width="100%" height="315" style="margin-bottom: 30px;" src="https://www.youtube.com/embed/MhhvNLztZKI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
-              <div class="col-md-6 col-xs-12">
+              <div class="col-md-4 col-xs-12">
                 <iframe width="100%" height="315" style="margin-bottom: 30px;" src="https://www.youtube.com/embed/MiSbmP_VA38" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
           </div>
