--- a/team.html
+++ b/team.html
@@ -126,11 +126,15 @@
                       </li>-->
                       <div class="dropdown" id="Gallery">
                       <li style="list-style: none;">
-                        <a id="kala" href="#" >Gallery</a></li>
+                        <a id="kala" class="galry" href="#">Gallery</a></li>
                         <div class="dropdown-content">
-                        <a href="gallery.html">Photos</a>
-                        <a href="videos.html">Videos</a>
+                          <a href="gallery.html">Photos</a>
+                          <a href="videos.html">Videos</a>
                           </div>
+                        </div>
+                        <div class="gora">
+                        <li><a href="gallery.html">Photos</a></li>
+                        <li><a href="videos.html">Videos</a></li>
                         </div>
                         <li class="active"><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
