--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <div class="row align-items-center">
               <div class="col-2">
                 <h2 class="mb-0 site-logo">
-                  <a href="index.html"><img class="logo" src="Logos/White linear.png" /></a>
+                  <a href="index.html">
+                    <img class="logo" src="Logos/White linear.png"/></a>
                 </h2>
               </div>
               <div class="col-10">
