--- a/videos.html
+++ b/videos.html
@@ -110,7 +110,7 @@
               <div class="row align-items-center">
                 <div class="col-2">
                   <h2 class="mb-0 site-logo">
-                    <a href="index.html"><img src="Logos/White linear.png" style="width:290px; height:85px;"></a>
+                    <a href="index.html"><img class="logo" src="Logos/White linear.png"/></a>
                   </h2>
                 </div>
                 <div class="col-10">
@@ -128,14 +128,18 @@
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
                   <!--    <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
-                      <div class="dropdown" id="Gallery">
-                      <li class="active" style="list-style: none;">
-                        <a id="kala" href="#">Gallery</a></li>
-                        <div class="dropdown-content">
-                        <a href="gallery.html">Photos</a>
-                        <a href="videos.html">Videos</a>
-                          </div>
-                        </div>
+                  <div class="dropdown" id="Gallery">
+                  <li class="active" style="list-style: none;">
+                    <a id="kala" class="galry" href="#">Gallery</a></li>
+                    <div class="dropdown-content">
+                      <a href="gallery.html">Photos</a>
+                      <a href="videos.html">Videos</a>
+                      </div>
+                    </div>
+                    <div class="gora">
+                    <li><a href="gallery.html">Photos</a></li>
+                    <li class="active"><a href="videos.html">Videos</a></li>
+                    </div>
                         <li><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
                        <!--   <li><a href="sponsor.html">Sponsors</a></li>
@@ -169,7 +173,7 @@
 
           <div class="row">
               <div class="col-md-4 col-xs-12">
-                <iframe width="100%" height="315" style="margin-bottom: 30px;" src="https://www.youtube.com/embed/LjuAimWKBjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="315" style="margin-bottom: 30px;" src="https://www.youtube.com/embed/LjuAimWKBjs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <div class="col-md-4 col-xs-12">
                 <iframe width="100%" height="315" style="margin-bottom: 30px;" src="https://www.youtube.com/embed/MhhvNLztZKI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
