--- a/index.html
+++ b/index.html
@@ -64,86 +64,70 @@
     })(document, "script", "facebook-jssdk");
   </script>
 
-  <div class="site-wrap">
-    <div class="site-mobile-menu">
-      <div class="site-mobile-menu-header">
-        <div class="site-mobile-menu-close mt-3">
-          <span class="icon-close2 js-menu-toggle"></span>
-        </div>
-      </div>
-      <div class="site-mobile-menu-body"></div>
-    </div>
+<div class="site-wrap">
+  <div class="site-mobile-menu">
+       <div class="site-mobile-menu-header">
+         <div class="site-mobile-menu-close mt-3">
+           <span class="icon-close2 js-menu-toggle"></span>
+         </div>
+       </div>
+       <div class="site-mobile-menu-body"></div>
+     </div>
     <!-- .site-mobile-menu -->
 
-    <div class="site-navbar-wrap bg-light" id="sticky">
-      <div class="container ">
-        <div class="site-navbar bg-light">
-          <div class="py-1" style="background-color:white;">
-            <div class="row align-items-center">
-              <div class="col-2">
-                <h2 class="mb-0 site-logo">
-                  <a href="index.html">
-                    <img class="logo" src="Logos/White linear.png"/></a>
-                </h2>
-              </div>
-              <div class="col-10">
-                <nav class="site-navigation text-right" role="navigation">
-                  <div class="container">
-                    <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3">
-                      <a href="#" class="site-menu-toggle js-menu-toggle text-white-opacity-5"><span
-                          class="icon-menu h3"></span></a>
-                    </div>
+   <div class="site-navbar-wrap bg-white" id="sticky">
+     <div class="container">
+       <div class="site-navbar bg-light">
+         <div class="py-1" style="background-color:white;">
+           <div class="row align-items-center">
+             <div class="col-2">
+               <h2 class="mb-0 site-logo">
+                 <a href="index.html"><img class="logo" src="Logos/White linear.png"/></a>
+               </h2>
+             </div>
+             <div class="col-10">
+               <nav class="site-navigation text-right" role="navigation">
+                 <div class="container">
+                   <div
+                     class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"
+                   >
+                     <a
+                       href="#"
+                       class="site-menu-toggle js-menu-toggle text-white-opacity-5"
+                       ><span class="icon-menu h3"></span
+                     ></a>
+                   </div>
+                   <ul class="site-menu js-clone-nav d-none d-lg-block">
+                     <li><a href="index.html">Home</a></li>
+                 <!--  <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
+                 <div class="dropdown" id="Gallery">
+                 <li style="list-style: none;">
+                   <a id="kala" class="galry" href="#">Gallery</a></li>
+                   <div class="dropdown-content">
+                     <a href="gallery.html">Photos</a>
+                     <a href="videos.html">Videos</a>
+                     </div>
+                   </div>
+                   <div class="gora">
+                   <li><a href="gallery.html">Photos</a></li>
+                   <li><a href="videos.html">Videos</a></li>
+                   </div>
+                     <li><a href="team.html">Team</a></li>
+                     <li class="active"><a href="spk.html">Speakers</a></li>
+                  <!--     <li><a href="sponsor.html">Sponsors</a></li>
+                     <li><a href="index.html#sch">Schedule</a></li>
+                   <li><a href="index.html#spk">Speakers</a></li> -->
+                 <!--    <li><a href="#foo">Contact</a></li>-->
+                   </ul>
+                 </div>
+               </nav>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
 
-                    <ul class="site-menu js-clone-nav d-none d-lg-block">
-                      <li class="active"><a href="index.html">Home</a></li>
-
-                      <!--<li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
-                      <!--  <li class="has-children">
-                        <a href="#">About</a>
-                       <ul class="dropdown arrow-top">
-                          <li><a href="#abt">About</a></li>
-
-                        </ul>
-                      </li>-->
-                      <div class="dropdown" id="Gallery">
-                      <li style="list-style: none;">
-                        <a id="kala" class="galry" href="#">Gallery</a></li>
-                        <div class="dropdown-content">
-                          <a href="gallery.html">Photos</a>
-                          <a href="videos.html">Videos</a>
-                          </div>
-                        </div>
-                        <div class="gora">
-                        <li><a href="gallery.html">Photos</a></li>
-                        <li><a href="videos.html">Videos</a></li>
-                        </div>
-                        <li><a href="team.html">Team</a></li>
-                        <li><a href="spk.html">Speakers</a></li>
-                      <!--   <li><a href="sponsor.html">Sponsors</a></li>
-                         <li><a href="#sch">Schedule</a></li>
-
-                      <li><a href="#spk">Speakers</a></li>-->
-                  <!--    <li><a href="#foo">Contact</a></li> -->
-                    </ul>
-                  </div>
-                </nav>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-        <!-- <div id="countdown">
-        <div id='tiles'></div>
-        <div class="labels">
-            <li>Days</li>
-            <li>Hours</li>
-            <li>Mins</li>
-            <li>Secs</li>
-        </div>
-    </div> -->
-
+   </div>     
 
       <div
         class="slide-one-item home-slider owl-carousel"
