--- a/spk.html
+++ b/spk.html
@@ -35,26 +35,31 @@
 
       .oddbox {
         display: flex;
+        margin-bottom: 100px;
       }
 
       .oddbox .text {
-        flex: 60%;
-        padding-right: 40px;
+        flex: 295%;
+        padding-right: 30px;
+        font-size: 18px;
         /* margin-right: 0px; */
       }
 
       .evenbox {
         display: flex;
+        margin-bottom: 100px;
       }
 
       .evenbox .text {
-        flex: 60%;
-        padding-left: 40px;
+        flex: 295%;
+        padding-left: 45px;
+        font-size: 18px;
       }
 
-      @media screen and (max-width:767px) {
+      @media screen and (max-width:991px) {
         .oddbox {
           flex-direction: column-reverse;
+          margin-bottom: 20px;
         }
 
         .oddbox .text {
@@ -63,6 +68,7 @@
 
         .evenbox {
           flex-direction: column;
+          margin-bottom: 20px;
         }
 
         .evenbox .text {
@@ -79,7 +85,7 @@
       .spk-img {
         width: 100%;
         height: 100%;
-        border-radius: 5px;
+        /* border-radius: 5px; */
         padding-top: 20px;
         padding-bottom: 20px;
       }
@@ -215,82 +221,38 @@
 
 
       <div class="container">
-        <div class="heading-with-border text-center">
+        <div class="heading-with-border text-center" style="margin-bottom: 55px;">
           <h2 class="heading text-uppercase" style="font-size: 30px">
             <strong>Speakers</strong>
           </h2>
         </div>
 
-        <div class="text-center">
+        <!-- <div class="text-center">
           <img src="images/Coming soon.png" width="110%" style="border-radius: 10%; margin-left: -3%;">
-        </div>
+        </div> -->
         <br>
 
-
-
-
-        <!-- <div class="spkbox mb-5">
-          <div class="row" style="background-color: #F1EEEE;">
-            <div class="col-md-5" style="background-color: #F1EEEE;">
-              <img src="./images/team/Aditya_Goyal.jpg" class="spk-img">
-            </div>
-            
-            <div class="col-md-7 description" style="background-color: #F1EEEE;">
-              <div class="container">
-                <h1 class="mb-3" style="margin-top: 20px;">Coming Soon!</h1>
-                <p>Coming Soon!</p>
-                <p>
-                  Sudha Varghese, also known as Sister Sudha, is a social worker and Catholic nun in India who has
-                  devoted herself to the Musahar, the Dalit of Bihar and Uttar Pradesh, one of the Scheduled Castes and
-                  who are considered the "untouchables". She resides and works in Jamsaut, a village in Patna district.
-                  She is sometimes called didi, which means elder sister.
-                </p>
-                <p>
-                  She is the chief executive officer of Nari Gunjan ("woman's voice"), a not-for-profit organisation
-                  that provides education, literacy, vocational training, healthcare, advocacy and life skills for Dalit
-                  girls and women in Bihar. Nari Gunjan has 50 facilities with an overall enrolment of 1500 girls.
-                </p>
-                <p>
-                  Varghese has stated that she draws inspiration from B. R. Ambedkar, a Dalit who fought against the
-                  concept of untouchability and was one of the drafters of the Constitution of India.
-                </p>
-                <p>
-                  <a href="https://www.facebook.com/padmashreesudha" class="p-2" style="font-size: 20px;" target="_blank"><span
-                      class="icon-facebook"></span></a>
-                  <a href="https://twitter.com/IamShamsAalam" class="p-2" style="font-size: 20px;" target="_blank"><span
-                      class="icon-twitter"></span></a>
-                  <a href="https://www.instagram.com/explore/tags/sudhavarghese/" class="p-2" style="font-size: 20px;" target="_blank"><span
-                      class="icon-instagram"></span></a>
-                  <a href="https://en.m.wikipedia.org/wiki/Sudha_Varghese" class="p-2" style="font-size: 20px;" target="_blank"><span
-                      class="icon-wikipedia-w"></span></a>
-                  <a href="" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <div class="evenbox mb-5">
+        <div class="evenbox">
           <div class="spkimg">
-            <img src="./images/sa.jpg" class="spk-img">
+            <img src="./images/speaker/darren-2.png" class="spk-img">
           </div>
           <div class="text">
-            <h1 class="mb-3" style="margin-top: 20px;">Shams Aalam</h1>
+            <h1 class="mb-3" style="margin-top: 20px;font-size: 43px;font-weight: 600;">
+              Darren Hood</h1>
+            <h3><i>Principle UX Designer</i></h3>
+            <br>
             <p>
-              Shams Aalam is a true exemplification of the fact that the size of one’s success is measured by the
-              strength of their desire. He is a paraplegic person, who has overcome all odds to become the world
-              record holder for longest open sea swimming by a paraplegic person.
+              Darren Hood has been involved in user experience design operations for over 20 years. He has been
+              as a full-time UX professional for 16+ years. He has previously worked for
+              the Fortune 50 and for some of the largest digital design agencies in the
+              world. He currently serves as an adjunct professor for Kent State
+              University's UX Design Master's program and Lawrence Technological
+              University. He is also the host for The World of UX podcast on CX of
+              M radio via Michigan State University and was elected to serve as the
+              Director of Education for UXPA International.
             </p>
             <p>
-              He completed his B.E. in Mechanical Engineering & MBA in HR & Operations . Being an international gold
-              medallist para swimmer, he was awarded best emerging leader in disability sports & sports diplomacy by
-              U.S. Department of State Global Sports Mentoring Program 2018. His endowment to never let his
-              impairment encompass him and control his life has been truly empowering and he has emerged to be an
-              Influencer in the society. People not only get inspired but also motivated by seeing and listening to
-              his extraordinary life story.
-            </p>
-            <p>
-              <a href="" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
+              <a href="linkedin.com/in/dwhood" target="_blank" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
             </p>
           </div>
 
@@ -298,26 +260,28 @@
 
         <div class="oddbox mb-5">
           <div class="text">
-            <h1 class="mb-3" style="margin-top: 20px;">Shams Aalam</h1>
+            <h1 class="mb-3" style="margin-top: 20px;font-size: 43px;font-weight: 600;">
+              Rahul Aggarwal
+            </h1>
+            <h3><i>Founder at Mission Oxygen,<br>Co-Founder - Designhill</i></h3>
+            <br>
             <p>
-              Shams Aalam is a true exemplification of the fact that the size of one’s success is measured by the
-              strength of their desire. He is a paraplegic person, who has overcome all odds to become the world
-              record holder for longest open sea swimming by a paraplegic person.
+              Rahul Aggarwal is an entrepreneur, investor and marketer who in
+              2014 co-founded one of the largest creative marketplaces,
+              Designhill, which has over 125,000 artists and designers from
+              all over the world. He along with a community of entrepreneurs
+              and founders from Delhi-NCR started Mission Oxygen – an initiative
+              helped with the oxygen crisis in India during the second wave of Covid19. Mission oxygen has donated over
+              5200 oxygen concentrators to over 375 hospitals across 26 states in India and is setting up 30+ oxygen
+              plants, crowdsourcing more than 50 crore rupees from 38000+ people all around the world.
+
             </p>
             <p>
-              He completed his B.E. in Mechanical Engineering & MBA in HR & Operations . Being an international gold
-              medallist para swimmer, he was awarded best emerging leader in disability sports & sports diplomacy by
-              U.S. Department of State Global Sports Mentoring Program 2018. His endowment to never let his
-              impairment encompass him and control his life has been truly empowering and he has emerged to be an
-              Influencer in the society. People not only get inspired but also motivated by seeing and listening to
-              his extraordinary life story.
-            </p>
-            <p>
-              <a href="" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
+              <a href="linkedin.com/in/raggarwal1" target="_blank" style="font-size: 20px;"><i class="fas fa-globe"></i></a>
             </p>
           </div>
           <div class="spkimg">
-            <img src="./images/sa.jpg" class="spk-img">
+            <img src="./images/speaker/rahul-2.png" class="spk-img">
           </div>
         </div>
         <!-- <div class="spkbox mb-5">
